@@ -390,7 +390,8 @@ rcurly:
 
 ClassInstanceCreationExpression:
 	NEW ClassType '(' ArgumentList_opt ')'
-		{ error ("FIXME - ClassInstanceCreationExpression"); }
+		{ internal_error (__FILE__, __LINE__,
+				  _("FIXME - ClassInstanceCreationExpression")); }
 ;
 
 ArgumentList:
@@ -408,9 +409,11 @@ ArgumentList_opt:
 
 ArrayCreationExpression:
 	NEW PrimitiveType DimExprs Dims_opt
-		{ error ("FIXME - ArrayCreatiionExpression"); }
+		{ internal_error (__FILE__, __LINE__,
+				  _("FIXME - ArrayCreationExpression")); }
 |	NEW ClassOrInterfaceType DimExprs Dims_opt
-		{ error ("FIXME - ArrayCreatiionExpression"); }
+		{ internal_error (__FILE__, __LINE__,
+				  _("FIXME - ArrayCreationExpression")); }
 ;
 
 DimExprs:
@@ -445,11 +448,11 @@ FieldAccess:
 
 MethodInvocation:
 	Name '(' ArgumentList_opt ')'
-		{ error ("method invocation not implemented"); }
+		{ error (_("Method invocation not implemented")); }
 |	Primary '.' SimpleName '(' ArgumentList_opt ')'
-		{ error ("method invocation not implemented"); }
+		{ error (_("Method invocation not implemented")); }
 |	SUPER '.' SimpleName '(' ArgumentList_opt ')'
-		{ error ("method invocation not implemented"); }
+		{ error (_("Method invocation not implemented")); }
 ;
 
 ArrayAccess:
@@ -539,7 +542,7 @@ CastExpression:
 		  int i;
 		  int base = expout_ptr - last_exp_size - 3;
 		  if (base < 0 || expout->elts[base+2].opcode != OP_TYPE)
-		    error ("invalid cast expression");
+		    error (_("Invalid cast expression"));
 		  type = expout->elts[base+1].type;
 		  /* Remove the 'Expression' and slide the
 		     UnaryExpressionNotPlusMinus down to replace it. */
@@ -795,7 +798,7 @@ parse_number (p, len, parsed_float, putithere)
 	return ERROR;
       if (n > limit_div_base
 	  || (n *= base) > limit - c)
-	error ("Numeric constant too large.");
+	error (_("Numeric constant too large"));
       n += c;
 	}
 
@@ -905,7 +908,7 @@ yylex ()
       if (c == '\\')
 	c = parse_escape (&lexptr);
       else if (c == '\'')
-	error ("Empty character constant.");
+	error (_("Empty character constant"));
 
       yylval.typed_val_int.val = c;
       yylval.typed_val_int.type = java_char_type;
@@ -918,12 +921,12 @@ yylex ()
 	    {
 	      lexptr = tokstart + namelen;
 	      if (lexptr[-1] != '\'')
-		error ("Unmatched single quote.");
+		error (_("Unmatched single quote"));
 	      namelen -= 2;
 	      tokstart++;
 	      goto tryname;
 	    }
-	  error ("Invalid character constant.");
+	  error (_("Invalid character constant"));
 	}
       return INTEGER_LITERAL;
 
@@ -1008,7 +1011,7 @@ yylex ()
 
 	    memcpy (err_copy, tokstart, p - tokstart);
 	    err_copy[p - tokstart] = 0;
-	    error ("Invalid number \"%s\".", err_copy);
+	    error (_("Invalid number \"%s\""), err_copy);
 	  }
 	lexptr = p;
 	return toktype;
@@ -1080,7 +1083,7 @@ yylex ()
       } while ((*tokptr != '"') && (*tokptr != '\0'));
       if (*tokptr++ != '"')
 	{
-	  error ("Unterminated string in expression.");
+	  error (_("Unterminated string in expression"));
 	}
       tempbuf[tempbufindex] = '\0';	/* See note above */
       yylval.sval.ptr = tempbuf;
@@ -1092,7 +1095,7 @@ yylex ()
   if (!(c == '_' || c == '$'
 	|| (c >= 'a' && c <= 'z') || (c >= 'A' && c <= 'Z')))
     /* We must have come across a bad character (e.g. ';').  */
-    error ("Invalid character '%c' in expression.", c);
+    error (_("Invalid character '%c' in expression"), c);
 
   /* It's a name.  See how long it is.  */
   namelen = 0;
@@ -1214,7 +1217,10 @@ yyerror (msg)
   if (prev_lexptr)
     lexptr = prev_lexptr;
 
-  error ("A %s in expression, near `%s'.", (msg ? msg : "error"), lexptr);
+  if (msg)
+    error (_("%s: near `%s'"), msg, lexptr);
+  else
+    error (_("error in expression, near `%s'"), lexptr);
 }
 
 static struct type *
@@ -1225,7 +1231,7 @@ java_type_from_name (name)
   char *tmp = copy_name (name);
   struct type *typ = java_lookup_class (tmp);
   if (typ == NULL || TYPE_CODE (typ) != TYPE_CODE_STRUCT)
-    error ("No class named %s.", tmp);
+    error (_("No class named `%s'"), tmp);
   return typ;
 }
 
@@ -1368,7 +1374,7 @@ push_qualified_expression_name (name, dot_index)
       while (dot_index < name.length && name.ptr[dot_index] != '.')
 	dot_index++;
     }
-  error ("unknown type `%.*s'", name.length, name.ptr);
+  error (_("unknown type `%.*s'"), name.length, name.ptr);
 }
 
 /* Handle Name in an expression (or LHS).
@@ -1417,9 +1423,9 @@ push_expression_name (name)
 			     builtin_type_int);
 	}
       else if (!have_full_symbols () && !have_partial_symbols ())
-	error ("No symbol table is loaded.  Use the \"file\" command.");
+	error (_("No symbol table is loaded.  Use the \"file\" command"));
       else
-	error ("No symbol \"%s\" in current context.", tmp);
+	error (_("No symbol \"%s\" in current context"), tmp);
     }
 
 }
